force-app/main/default/objects/Opportunity/fields/SDO_Sales_Industry__c.field-meta.xml
<CustomField>
    <fullName>SDO_Sales_Industry__c</fullName>
    <label>產業</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
        <value>
            <fullName>Agriculture</fullName>
        </value>
        <value>
            <fullName>Apparel</fullName>
        </value>
        <value>
            <fullName>Banking</fullName>
        </value>
        <value>
            <fullName>Biotechnology</fullName>
        </value>
        <value>
            <fullName>Chemicals</fullName>
        </value>
        <value>
            <fullName>Communications</fullName>
        </value>
        <value>
            <fullName>Construction</fullName>
        </value>
        <value>
            <fullName>Consulting</fullName>
        </value>
        <value>
            <fullName>Education</fullName>
        </value>
        <value>
            <fullName>Electronics</fullName>
        </value>
        <value>
            <fullName>Energy</fullName>
        </value>
        <value>
            <fullName>Engineering</fullName>
        </value>
        <value>
            <fullName>Entertainment</fullName>
        </value>
        <value>
            <fullName>Environmental</fullName>
        </value>
        <value>
            <fullName>Finance</fullName>
        </value>
        <value>
            <fullName>Food &amp; Beverage</fullName>
        </value>
        <value>
            <fullName>Government</fullName>
        </value>
        <value>
            <fullName>Healthcare</fullName>
        </value>
        <value>
            <fullName>Hospitality</fullName>
        </value>
        <value>
            <fullName>Insurance</fullName>
        </value>
        <value>
            <fullName>Machinery</fullName>
        </value>
        <value>
            <fullName>Manufacturing</fullName>
        </value>
        <value>
            <fullName>Media</fullName>
        </value>
        <value>
            <fullName>Not For Profit</fullName>
        </value>
        <value>
            <fullName>Other</fullName>
        </value>
        <value>
            <fullName>Recreation</fullName>
        </value>
        <value>
            <fullName>Retail</fullName>
        </value>
        <value>
            <fullName>Shipping</fullName>
        </value>
        <value>
            <fullName>Technology</fullName>
        </value>
        <value>
            <fullName>Telecommunications</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>