force-app/main/default/objects/Opportunity/fields/SDO_Sales_Open_Days_Alert__c.field-meta.xml
<CustomField>
    <fullName>SDO_Sales_Open_Days_Alert__c</fullName>
    <description
  >Displays a visual warning when the Opportunity has been open for more than 30 weekdays.</description>
    <formula
  >IF(AND(NOT(IsClosed), SDO_Sales_Open_Days__c &gt; 30), $Label.SDO_Sales_Open_Days_Alert_Message, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>當已開啟天數超過 30 個工作天時顯示警示。</inlineHelpText>
    <label>開啟天數警示</label>
    <type>Text</type>
</CustomField>