force-app/main/default/objects/Opportunity/validationRules/Require_Amount_When_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Amount_When_Won</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    IsWon,
    ISBLANK(Amount)
)</errorConditionFormula>
    <errorDisplayField>Amount</errorDisplayField>
    <errorMessage>商機標記為成交前，請先填寫成交金額。</errorMessage>
</ValidationRule>