force-app/main/default/objects/Opportunity/validationRules/Require_CloseDate_Current_Qtr_When_Won.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <fullName>Require_CloseDate_Current_Qtr_When_Won</fullName>
    <description>Requires current-quarter Close Date before marking won.</description>
    <errorConditionFormula>AND(
    IsWon,
    OR(ISNEW(), ISCHANGED(StageName), ISCHANGED(CloseDate)),
    OR(
        ISBLANK(CloseDate),
        CloseDate &lt; DATE(YEAR(TODAY()), (FLOOR((MONTH(TODAY()) - 1) / 3) * 3) + 1, 1),
        CloseDate &gt;= ADDMONTHS(DATE(YEAR(TODAY()), (FLOOR((MONTH(TODAY()) - 1) / 3) * 3) + 1, 1), 3)
    )
)</errorConditionFormula>
    <errorDisplayField>CloseDate</errorDisplayField>
    <errorMessage>成交前結案日期必須落在本季內。</errorMessage>
</ValidationRule>