force-app/main/default/objects/Opportunity/validationRules/Require_CloseDate_When_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_CloseDate_When_Won</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    IsWon,
    ISBLANK(CloseDate)
)</errorConditionFormula>
    <errorDisplayField>CloseDate</errorDisplayField>
    <errorMessage>商機標記為成交前，請先填寫結案日期。</errorMessage>
</ValidationRule>