force-app/main/default/objects/Opportunity/validationRules/Require_Industry_On_Create.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Industry_On_Create</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; ISBLANK(TEXT(SDO_Sales_Industry__c))</errorConditionFormula>
    <errorMessage>請填寫產業。</errorMessage>
</ValidationRule>