force-app/main/default/objects/Opportunity/validationRules/Require_Product_When_Won.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <fullName>Require_Product_When_Won</fullName>
    <description
  >Blocks won Opportunities until at least one standard Opportunity Product line item exists.</description>
    <errorConditionFormula>AND(
    IsWon,
    NOT(HasOpportunityLineItem)
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>成交前必須至少新增一筆產品。</errorMessage>
</ValidationRule>