force-app/main/default/objects/Opportunity/listViews/Default_Opportunity_Pipeline.listView-meta.xml
<ListView>
    <fullName>Default_Opportunity_Pipeline</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.FORECAST_CATEGORY</columns>
    <columns>OPPORTUNITY.NEXT_STEP</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <columns>OPPORTUNITY.PUSH_COUNT</columns>
    <columns>TERR2_NAME</columns>
    <columns>TERR2_DESC</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>SDO_Sales_Open_Days__c</columns>
    <columns>SDO_Sales_Open_Days_Alert__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_MONTHS:3</value>
    </filters>
    <label>Opportunity Pipeline</label>
</ListView>